<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22C1D8"
    tools:context=".LaporanActivity">

    <TextView
        android:id="@+id/tv_title_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_report"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_kembali_beranda"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_report">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_grafik"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="32dp">

                <View
                    android:id="@+id/bar_pemasukan"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="#4CAF50" />

                <View
                    android:id="@+id/bar_pengeluaran"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="#F44336" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1A000000"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_income"
                    android:textColor="#E0E0E0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_total_pemasukan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Rp 100.000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_expense"
                    android:textColor="#E0E0E0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_total_pengeluaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Rp 50.000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="#4DFFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_remaining_balance"
                    android:textColor="#E0E0E0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_sisa_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    tools:text="Rp 50.000" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_kembali_beranda"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:backgroundTint="#137577"
        android:text="@string/btn_back_home"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>